test_files/s_cproc/macro_object_expand/test_023/e_expect.output
/home/jason/github/stupid_lib/test_files/s_cproc/macro_define/test_023/i.input:1:21: error: '#' is not followed by a macro parameter
 #define VA(arg...) #__VA_ARGS__
                     ^
